# research-summarizer

./: .gitignore  README.md  app.py  main.py  pyproject.toml
agents/: contradiction_detector.py  ingestion.py  parser.py  quality_assessor.py  summarizer.py  synthesizer.py
graph/: state.py  workflow.py  workflow_parallel.py
utils/: calibrate_similarity_threshold.py  concurrency.py  json_extraction.py  llm_factory.py  model_config.py  pdf_generator.py
