[project]
name = "research-summarizer"
version = "0.1.0"
description = "Agentic research paper summarizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "sentence-transformers>=2.7.0",
    "transformers>=4.40.0",
    "pypdf2>=3.0.1",
    "arxiv>=2.1.3",
    "pdfplumber>=0.11.0",
    "chromadb>=0.5.0",
    "streamlit>=1.35.0",
    "plotly>=5.20.0",
    "rouge>=1.0.1",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.0",
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]